[metadata]
description-file = README.md

[tool:pytest]
testpaths = tests/
filterwarnings = 
    # Ignore DeprecationWarning for jsonscema's use of ABCs
    ignore:Using or importing the ABCs from .collections.:DeprecationWarning

[mypy]
strict_equality = True
disallow_untyped_decorators = False
warn_unreachable = True
follow_imports = skip
ignore_missing_imports = True

[coverage:run]
source = ordway_tap/
branch = True
parallel = True

[coverage:report]
skip_empty = True
exclude_lines = 
    pragma: no cover
    if TYPE_CHECKING:

    if __name__ == .__main__.:
