[metadata]
description-file = README.md
license_file = LICENSE

[tool:pytest]
testpaths = tests/
filterwarnings = 
    # Ignore DeprecationWarning for jsonscema's use of ABCs
    ignore:Using or importing the ABCs from .collections.:DeprecationWarning

[mypy]
strict_equality = True
disallow_untyped_decorators = False
warn_unreachable = True
follow_imports = skip
ignore_missing_imports = True

[coverage:run]
source = tap_ordway/
branch = True
parallel = True

[coverage:report]
skip_empty = True
exclude_lines = 
    pragma: no cover
    if TYPE_CHECKING:

    if __name__ == .__main__.:

[isort]
ensure_newline_before_comments = True
force_grid_wrap = 0
include_trailing_comma = True
known_testing =
  pytest
  unittest
known_typing = typing
line_length = 88
lines_between_sections = 0
multi_line_output = 3
sections = 
    FUTURE 
    TYPING 
    TESTING 
    STDLIB 
    THIRDPARTY 
    FIRSTPARTY 
    LOCALFOLDER
src_paths = ./tap_ordway/
use_parentheses = True